# zetesis

./: .gitignore  .kanon-ci.toml  CLAUDE.md  Cargo.toml  LICENSE-DOCS  README.md  SECURITY.md  clippy.toml  deny.toml  llms.txt  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
_llm/: architecture.toml  current_state.toml  decisions.toml  glossary.toml
crates/zetesis-api/: Cargo.toml
crates/zetesis-api/src/: constraints.rs  crawler.rs  deep.rs  error.rs  lib.rs  provider.rs
crates/zetesis-api/tests/: constraint_composition.rs  error_classification.rs  trait_object_safety.rs
crates/zetesis-types/: Cargo.toml
crates/zetesis-types/src/: budget.rs  citation.rs  cost.rs  lib.rs  query.rs  result.rs  tier.rs
crates/zetesis-types/tests/: cross_type_invariants.rs
docs/research/: multi-signal-classifiers.md
