[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/forkwright/zetesis"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
await_holding_lock = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
similar_names = "allow"
must_use_candidate = "allow"
must_use_unit = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
module_name_repetitions = "allow"
implicit_hasher = "allow"
fn_params_excessive_bools = "allow"
needless_pass_by_value = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
# Pinned here once sub-crates land. Phase 01 adds:
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# snafu = "0.8"
# reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# fjall = "2"
# ciborium = "0.2"
# jiff = "0.2"
