[workspace]
resolver = "2"
members = [
    "crates/zetesis-api",
    "crates/zetesis-types",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/forkwright/zetesis"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
await_holding_lock = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
similar_names = "allow"
must_use_candidate = "allow"
must_use_unit = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
module_name_repetitions = "allow"
implicit_hasher = "allow"
fn_params_excessive_bools = "allow"
needless_pass_by_value = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
# Phase 01a: trait surface + shared types. Provider impls in later phases will
# add reqwest, fjall, koina, etc. here.
#
# Fleet-pinned versions (kanon/aletheia/harmonia conventions):
#   - snafu 0.8          (kanon, aletheia, harmonia)
#   - jiff  0.2          (kanon)
#   - serde 1 + derive   (kanon)
#   - tokio 1 + full     (kanon)
async-trait     = "0.1"
ciborium        = "0.2"
futures         = "0.3"
jiff            = { version = "0.2", features = ["serde"] }
language-tags   = { version = "0.3", features = ["serde"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
snafu           = "0.8"
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
url             = { version = "2", features = ["serde"] }

# Path deps so downstream crates resolve workspace-locally.
zetesis-api     = { version = "0.0.1", path = "crates/zetesis-api" }
zetesis-types   = { version = "0.0.1", path = "crates/zetesis-types" }
