[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/forkwright/zetesis"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
await_holding_lock = "deny"

[workspace.dependencies]
# Pinned here once sub-crates land. Phase 01 adds:
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# snafu = "0.8"
# reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# fjall = "2"
# ciborium = "0.2"
# jiff = "0.2"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
