[package]
name = "zetesis-api"
description = "Trait surface for the zetesis sovereign research substrate (Provider, DeepResearch, Crawler)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# WHY async-trait: native async fn in traits (stable since 1.75) is not
# dyn-compatible without RPITIT gymnastics. zetesis-router and every
# consumer that stores a heterogeneous Provider collection needs
# `Box<dyn Provider>`; async-trait is the least-intrusive way to keep
# that shape. Phase 1a accepts the single-dep cost to keep the trait
# surface object-safe for Phase 1b provider impls.
async-trait   = { workspace = true }
jiff          = { workspace = true }
language-tags = { workspace = true }
serde         = { workspace = true }
snafu         = { workspace = true }
url           = { workspace = true }
zetesis-types = { workspace = true }

[dev-dependencies]
futures    = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
